--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "advanced-react-patterns-v2",
 	"version": "1.0.0",
-	"description": "The updated version of my advanced react component patterns course",
+	"description": "lambda dumbdumb web15 review group repo",
 	"keywords": [],
 	"homepage": "http://advanced-react-patterns.netlify.com/",
 	"main": "src/index.js",
